--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.16",
+    "@tanstack/react-query": "^5.69.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.4.0",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
