--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sentry/react": "^9.10.0",
+    "@sentry/vite-plugin": "^3.2.3",
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-query": "^5.69.0",
     "react": "^19.0.0",
