--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/vite-plugin": "^3.2.3",
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-query": "^5.69.0",
+    "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
