--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@sentry/vite-plugin": "^3.2.3",
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-query": "^5.69.0",
+    "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
-    "tailwindcss": "^4.0.16"
+    "tailwindcss": "^4.0.16",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
