--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "react-router": "^7.4.0",
     "tailwindcss": "^4.0.16",
     "zustand": "^5.0.3"
