--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@sentry/vite-plugin": "^3.2.3",
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-query": "^5.69.0",
+    "@types/event-source-polyfill": "^1.0.5",
+    "event-source-polyfill": "^1.0.31",
     "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
