--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites":  [
     {"source": "/(.*)", "destination": "/"}
+  ],
+  "headers": [
+    {
+      "source": "/(.*).(html|js|css)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
+      ]
+    }
   ]
 }
