--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-query": "^5.69.0",
     "@types/event-source-polyfill": "^1.0.5",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "event-source-polyfill": "^1.0.31",
     "heic2any": "^0.0.4",
     "react": "^19.0.0",
