--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.0",
     "vite-plugin-pwa": "^1.0.0",
-    "vite-plugin-svgr": "^4.3.0"
-  }
+    "vite-plugin-svgr": "^4.3.0",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "packageManager": "pnpm@9.9.0+sha256.7a4261e50d9a44d9240baf6c9d6e10089dcf0a79d0007f2a26985a6927324177"
 }
