--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@formkit/auto-animate": "^0.8.2",
     "@sentry/react": "^9.10.0",
     "@sentry/vite-plugin": "^3.2.3",
     "@tailwindcss/vite": "^4.0.16",
