--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,9 @@
   "singleQuote": true,
   "printWidth": 100,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": ["^react$", "^react-router-dom$", "<THIRD_PARTY_MODULES>", "^[a-zA-Z]", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
