--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,json,css,md}'",
+    "lint:all": "npm run lint && npm run format",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,24 +17,25 @@
     "@formkit/auto-animate": "^0.8.2",
     "@sentry/react": "^9.10.0",
     "@sentry/vite-plugin": "^3.2.3",
-    "@tailwindcss/vite": "^4.0.16",
-    "@tanstack/react-query": "^5.69.0",
-    "@types/event-source-polyfill": "^1.0.5",
-    "@vercel/analytics": "^1.5.0",
-    "@vercel/speed-insights": "^1.2.0",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "event-source-polyfill": "^1.0.31",
     "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "react-router": "^7.5.2",
-    "tailwindcss": "^4.0.16",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@tailwindcss/vite": "^4.0.16",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
@@ -43,12 +46,12 @@
     "globals": "^15.15.0",
     "prettier": "^3.5.3",
     "puppeteer": "^24.5.0",
+    "tailwindcss": "^4.0.16",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.28.0",
     "vite": "^6.2.0",
     "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "packageManager": "pnpm@9.9.0+sha256.7a4261e50d9a44d9240baf6c9d6e10089dcf0a79d0007f2a26985a6927324177"
+  }
 }
